--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,8 +30,9 @@ jobs:
         #- { name: MacOS XCode,    os: macos-latest   }
         config:
         - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
-        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
         - { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
+        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
+        - { name: Coverage, flags: -DCMAKE_BUILD_TYPE=Coverage }
         #- { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
         #- { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
 
