--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,19 @@ name: CMake
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master
+    branches-ignore:
+      - dev
+    paths-ignore:
+      - 'build/**'
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+    branches-ignore:
+      - dev
+    paths-ignore:
+      - 'build/**'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
