--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     name: ${{ matrix.platform.name }} ${{ matrix.config.name }}
-    #runs-on: ${{ matrix.platform.os }}
+    runs-on: ${{ matrix.platform.os }}
     container: ubuntu:latest
 
     strategy:
