--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,19 +48,19 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Install Linux Dependencies
-      if: runner.os == 'Linux'
-      run: apt-get update -y && apt-get install cmake clang g++ ninja-build libboost-all-dev openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers -y
+    #- name: Install Linux Dependencies
+    #  if: runner.os == 'Linux'
+    #  run: apt-get update -y && apt-get install cmake clang g++ ninja-build libboost-all-dev openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers -y
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{github.workspace}}/build
 
-    - name: SD
+    - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: chmod 775 ${{github.workspace}}/build
+      run: ls ${{github.workspace}}
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
