--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,9 +48,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    #- name: Install Linux Dependencies
-    #  if: runner.os == 'Linux'
-    #  run: apt-get update -y && apt-get install cmake clang g++ ninja-build libboost-all-dev openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers -y
+    - name: Install Linux Dependencies
+      if: runner.os == 'Linux'
+      run: apt-get update -y && apt-get install cmake #clang g++ ninja-build libboost-all-dev openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers -y
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
