--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,11 +57,6 @@ jobs:
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory /home/runner/work/BenLib/BenLib
 
-    - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
-      run: ls ${{github.workspace}}
-
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
       # access regardless of the host operating system
@@ -70,7 +65,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      run: cmake -G Ninja $GITHUB_WORKSPACE
+      run: cmake -G Ninja ${{github.workspace}}/build
 
     - name: Build
       working-directory: ${{github.workspace}}/build
