--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: mkdir ${{github.workspace}}/build
+      run: mkdir -p ${{github.workspace}}/build
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
