--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     name: ${{ matrix.platform.name }} ${{ matrix.config.name }}
     runs-on: ${{ matrix.platform.os }} # VM
-    container: ubuntu:latest # Docker container
+    #container: ubuntu:latest # Docker container
 
     strategy:
       fail-fast: false
@@ -55,32 +55,32 @@ jobs:
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: mkdir -p ${{github.workspace}}/build
+      run: cmake -E make_directory /root/build #/root/build #${{github.workspace}}/build
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
       # access regardless of the host operating system
       shell: bash
-      working-directory: ${{github.workspace}}/build
+      working-directory: /root/build #${{github.workspace}}/build
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      run: cmake -G Ninja ${{github.workspace}}/build
+      run: cmake -G Ninja /root/build #${{github.workspace}}/build
 
     - name: Build
-      working-directory: ${{github.workspace}}/build
+      working-directory: /root/build #${{github.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>" --config $BUILD_TYPE
       run: ninja #cmake --build . --parallel
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
+      working-directory: /root/build #${{github.workspace}}/build
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C $BUILD_TYPE
     - name: CPack
-      working-directory: ${{github.workspace}}/build
+      working-directory: /root/build #${{github.workspace}}/build
       shell: bash
       # Execute cpack to build packages
       run: cpack
