--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory /root/build #/root/build #${{github.workspace}}/build
+      run: cmake -E make_directory /root/build #${{github.workspace}}/build
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -65,22 +65,22 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      run: cmake -G Ninja /root/build #${{github.workspace}}/build
+      run: cmake -G Ninja ${{github.workspace}}/build
 
     - name: Build
-      working-directory: /root/build #${{github.workspace}}/build
+      working-directory: ${{github.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>" --config $BUILD_TYPE
       run: ninja #cmake --build . --parallel
 
     - name: Test
-      working-directory: /root/build #${{github.workspace}}/build
+      working-directory: ${{github.workspace}}/build
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C $BUILD_TYPE
     - name: CPack
-      working-directory: /root/build #${{github.workspace}}/build
+      working-directory: ${{github.workspace}}/build
       shell: bash
       # Execute cpack to build packages
       run: cpack
