--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -66,7 +66,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      run: ls /github/workspace/ && cmake -G Ninja ${{github.workspace}}/build
+      run: ls /github/workspace/ #&& cmake -G Ninja ${{github.workspace}}/build
 
     - name: Build
       working-directory: ${{github.workspace}}/build
