--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,6 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  #DEBIAN_FRONTEND: noninteractive
 
 jobs:
   build:
@@ -24,9 +23,7 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     name: ${{ matrix.platform.name }} ${{ matrix.config.name }}
-    runs-on: ${{ matrix.platform.os }} # VM
-    #container: 
-    #  image: ubuntu:latest # Docker container
+    runs-on: ${{ matrix.platform.os }}
 
     strategy:
       fail-fast: false
@@ -51,7 +48,7 @@ jobs:
 
     - name: Install Linux Dependencies
       if: runner.os == 'Linux'
-      run: sudo apt-get update -y && sudo apt-get install cmake clang g++ ninja-build libboost-all-dev openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers -y
+      run: sudo apt-get update && sudo apt-get install ninja-build libboost-all-dev openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
@@ -66,7 +63,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      run: cmake -G Ninja ${{github.workspace}}/build
+      run: cmake -G Ninja $GITHUB_WORKSPACE
 
     - name: Build
       working-directory: ${{github.workspace}}/build
