--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -108,7 +108,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{github.workspace}}/build/Package/BenLib-1.0.0-Release.x86_64.zip
+        asset_path: ${{github.workspace}}/build/package/BenLib-1.0.0-Release.x86_64.zip
         asset_name: BenLib-1.0.0-Release.x86_64.zip
         asset_content_type: application/zip
 
