--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -97,8 +97,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $(basename "${{ github.ref }}")
-        release_name: $(basename "${{ github.ref }}")
+        tag_name: test #$(basename "${{ github.ref }}")
+        release_name: test #$(basename "${{ github.ref }}")
         draft: true
         prerelease: false
 
