--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -89,6 +89,13 @@ jobs:
       # Execute cpack to build packages
       run: cpack
 
+    - name: Bump version and push tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v5.4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
+
       # Create Draft Release
     - name: Create Draft Release
       if: matrix.config.name == 'Release'
@@ -97,8 +104,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
-        release_name: build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        tag_name: ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        release_name: Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        #body: ${{ steps.tag_version.outputs.changelog }}
         draft: true
         prerelease: false
 
