--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,6 +9,7 @@ on:
       - '**.md'
       - 'appveyor.yml'
   pull_request:
+    #types: [closed]
     branches:
       - master
     paths-ignore:
@@ -98,7 +99,7 @@ jobs:
 
       # Create Draft Release
     - name: Create Draft Release
-      if: matrix.config.name == 'Release'
+      if: matrix.config.name == 'Release' && contains(matrix.platform.flags, 'clang')
       id: create_release
       uses: actions/create-release@v1
       env:
