--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
+  #BUILD_TYPE: Release
 
 jobs:
   build:
@@ -91,6 +91,7 @@ jobs:
       run: cpack
 
     - name: Bump version and push tag
+      if: matrix.config.name == 'Release' && contains(matrix.platform.flags, 'clang')
       id: tag_version
       uses: mathieudutour/github-tag-action@v5.4
       with:
@@ -106,11 +107,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name:  ${{ steps.tag_version.outputs.new_tag }} #${{ github.ref }} #${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
-        release_name: ${{ steps.tag_version.outputs.new_tag }} #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        release_name: Release ${{ steps.tag_version.outputs.new_tag } #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
         #body: ${{ steps.tag_version.outputs.changelog }}
         draft: false
         prerelease: false
     - name: Upload Release Assets
+      if: matrix.config.name == 'Release' && contains(matrix.platform.flags, 'clang')
       id: upload-release-assets
       uses: dwenegar/upload-release-assets@v1
       env:
