--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ on:
       - '**.md'
       - 'appveyor.yml'
 
-env:
+#env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   #BUILD_TYPE: Release
 
