--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -101,19 +101,19 @@ jobs:
 
       # Create Draft Release
     - name: Create Draft Release
-      if: matrix.config.name == 'Release' #&& (contains(matrix.platform.flags, 'clang')) &&  (contains(${{ github.event.head_commit.message }}, 'Release'))
+      if: matrix.config.name == 'Release'
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name:  ${{ steps.tag_version.outputs.new_tag }} #${{ github.ref }} #${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
-        release_name: Release ${{ steps.tag_version.outputs.new_tag }} #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        release_name: Release ${{matrix.platform.name}} ${{ steps.tag_version.outputs.new_tag }} #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
         body: ${{ steps.tag_version.outputs.changelog }}
         draft: false
         prerelease: false
     - name: Upload Release Assets
-      if: matrix.config.name == 'Release' # && (contains(matrix.platform.flags, 'clang')) &&  (contains(${{ github.event.head_commit.message }}, 'Release'))
+      if: matrix.config.name == 'Release'
       id: upload-release-assets
       uses: dwenegar/upload-release-assets@v1
       env:
