--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,8 @@
-name: CMake
+name: Release Maker
 
 on:
   push:
     branches: 
-      - master
-    paths-ignore:
-      - 'build/**'
-      - '**.md'
-      - 'appveyor.yml'
-  pull_request:
-    #types: [closed]
-    branches:
       - master
     paths-ignore:
       - 'build/**'
@@ -27,25 +19,8 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    name: ${{ matrix.platform.name }} ${{ matrix.config.name }}
-    runs-on: ${{ matrix.platform.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-        #- { name: Windows VS2017, os: windows-2016   }
-        #- { name: Windows VS2019, os: windows-latest }
-        - { name: Linux GCC,      os: ubuntu-latest  }
-        - { name: Linux Clang,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        #- { name: MacOS XCode,    os: macos-latest   }
-        config:
-        - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
-        - { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
-        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
-        - { name: Coverage, flags: -DCMAKE_BUILD_TYPE=Coverage }
-        #- { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
-        #- { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
+    name: Linux Clang Release Maker
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Code
@@ -68,13 +43,13 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12 -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-      run: cmake -G Ninja $GITHUB_WORKSPACE ${{matrix.platform.flags}} ${{matrix.config.flags}}
+      run: cmake -G Ninja $GITHUB_WORKSPACE -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
       working-directory: ${{github.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>" --config $BUILD_TYPE
-      run: ninja #cmake --build . --parallel
+      run: ninja
 
     - name: Test
       working-directory: ${{github.workspace}}/build
@@ -85,30 +60,26 @@ jobs:
 
       # Build packages
     - name: CPack
-      if: matrix.config.name == 'Release'
       working-directory: ${{github.workspace}}/build
       shell: bash
       # Execute cpack to build packages
       run: cpack
 
     - name: Bump version and push tag
-      if: matrix.config.name == 'Release'
       id: tag_version
       uses: mathieudutour/github-tag-action@v5.4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
-
       # Create Draft Release
     - name: Create Draft Release
-      if: matrix.config.name == 'Release'
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name:  ${{ steps.tag_version.outputs.new_tag }} #${{ github.ref }} #${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
-        release_name: Release ${{matrix.platform.name}} ${{ steps.tag_version.outputs.new_tag }} #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        release_name: Release ${{ steps.tag_version.outputs.new_tag }} #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
         body: ${{ steps.tag_version.outputs.changelog }}
         draft: false
         prerelease: false
