--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,8 +36,8 @@ jobs:
         platform:
         #- { name: Windows VS2017, os: windows-2016   }
         #- { name: Windows VS2019, os: windows-latest }
-        - { name: Linux GCC x86_64,      os: ubuntu-latest  }
-        - { name: Linux Clang x86_64,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
+        - { name: Linux GCC x86_64,      os: ubuntu-latest, flags: -DCMAKE_CXX_FLAGS="${CMAKE_CXX_FLAGS} -march=haswell" -DCMAKE_C_FLAGS="${CMAKE_C_FLAGS} -march=haswell"
+        - { name: Linux Clang x86_64,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_CXX_FLAGS="${CMAKE_CXX_FLAGS} -march=haswell" -DCMAKE_C_FLAGS="${CMAKE_C_FLAGS} -march=haswell"}
         #- { name: MacOS XCode,    os: macos-latest   }
         config:
         - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
@@ -49,9 +49,9 @@ jobs:
 
         #arch:
         #- { name: ARM64, flags: -DCMAKE_BUILD_TYPE=Coverage }
-        include:
-        - platform: { name: ARM, os: ubuntu-latest } #aarch64-linux-gnu-gcc -march=native
-          config: { name: ARM64 GCC, flags: -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++}
+        #include:
+        #- platform: { name: ARM, os: ubuntu-latest } #aarch64-linux-gnu-gcc -march=native
+        #  config: { name: ARM64 GCC, flags: -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++}
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
