--- a/lib/python/CMakeLists.txt
+++ b/lib/python/CMakeLists.txt
@@ -65,15 +65,15 @@ set(HEADERS
 #Build libs
 add_library(class_binding SHARED src/class_binding.cpp)
 set_target_properties(class_binding PROPERTIES PREFIX "") #Remove lib prefix
-target_link_libraries(class_binding ${Boost_LIBRARIES} ${PythonLibs_LIBRARIES})
+target_link_libraries(class_binding ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
 
 add_library(function_binding SHARED src/function_binding.cpp)
 set_target_properties(function_binding PROPERTIES PREFIX "") #Remove lib prefix
-target_link_libraries(function_binding ${Boost_LIBRARIES} ${PythonLibs_LIBRARIES})
+target_link_libraries(function_binding ${Boost_LIBRARIES} $${PYTHON_LIBRARIES})
 
 add_library(function_binding_c SHARED ${SRCS} ${HEADERS})
 set_target_properties(function_binding_c PROPERTIES PREFIX "") #Remove lib prefix
-target_link_libraries(function_binding_c ${Boost_LIBRARIES} ${PythonLibs_LIBRARIES})
+target_link_libraries(function_binding_c ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
 
 configure_file(python/class_binding.py ${CMAKE_BINARY_DIR}/bin/class_binding.py COPYONLY)
 configure_file(python/function_binding.py ${CMAKE_BINARY_DIR}/bin/function_binding.py COPYONLY)
