--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,9 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
-  create:
-    tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+*'
+#  create:
+#    tags:
+#    - 'v[0-9]+.[0-9]+.[0-9]+*'
 #https://github.community/t/start-a-github-workflow-on-a-tag-name-and-build-based-on-that-specific-tag/16992/2
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
