--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,5 +78,6 @@ jobs:
       #if: startsWith(github.ref, 'refs/tags/')
       with:
         files: "${{github.workspace}}/build/package/*"
+        tag_name: v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
