--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,13 +71,33 @@ jobs:
       # Execute cpack to build packages
       run: cpack
 
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      #if: startsWith(github.ref, 'refs/tags/')
+    - uses: actions/checkout@v2.2.0
       with:
-        files: "${{github.workspace}}/build/package/*"
-        tag_name: v1.0.1
+        fetch-depth: 0
+
+      #▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼#
+      - name: Get previous tag
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      #▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲#
+
+      # Create Draft Release
+    - name: Create Draft Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.previoustag.outputs.tag }}
+        release_name: Release Clang ${{ steps.previoustag.outputs.tag }} #${{ steps.tag_version.outputs.previous_tag }} #Release ${{ github.ref }} #Release ${{ steps.tag_version.outputs.new_tag }} #build-$(date +%Y%m%d-%H%M%S) #$(basename "${{ github.ref }}")
+        body: "OK"
+        draft: false
+        prerelease: false
+    - name: Upload Release Assets
+      id: upload-release-assets
+      uses: dwenegar/upload-release-assets@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        release_id: ${{ steps.create_release.outputs.id }}
+        assets_path: ${{github.workspace}}/build/package
