--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
 
     - uses: actions/checkout@v2.2.0
       with:
-        fetch-depth: 0
+        fetch-depth: '0'
 
       - name: Get previous tag
         id: previoustag
